--- a/src/pages/Dashboard/WishlistItem/WishlistItem.module.scss
+++ b/src/pages/Dashboard/WishlistItem/WishlistItem.module.scss
@@ -28,13 +28,21 @@
 }
 
 .wrapper-image {
-  height: 100%;
+  max-width: 220px;
+
   .image {
+    width: 100%;
     height: 100%;
+    object-fit: cover;
+    border-radius: 12px 0 0 12px;
 
     @include x-small {
-      width: 100%;
+      border-radius: 0;
     }
+  }
+
+  @include x-small {
+    max-width: 100%;
   }
 }
 
@@ -94,7 +102,7 @@
   }
 
   @include x-small {
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .item {
