--- a/src/pages/Dashboard/PropertyItem/PropertyItem.module.scss
+++ b/src/pages/Dashboard/PropertyItem/PropertyItem.module.scss
@@ -7,9 +7,6 @@
   border: 1px solid var(--border-color);
   border-radius: 8px;
 
-  @include small {
-  }
-
   @include x-small {
     flex-direction: column;
     border-radius: 0;
@@ -20,12 +17,17 @@
 
 .wrapper-image {
   position: relative;
+  max-width: 190px;
 
   .image {
+    width: 100%;
     height: 100%;
+    object-fit: cover;
+    border-radius: 8px 0 0 8px;
 
     @include x-small {
       width: 100%;
+      border-radius: 0;
     }
   }
 
@@ -50,6 +52,10 @@
       right: 14px;
     }
   }
+
+  @include x-small {
+    max-width: 100%;
+  }
 }
 
 .info {
@@ -57,7 +63,7 @@
   flex: 1;
   flex-direction: column;
   justify-content: space-between;
-  margin: 16px;
+  margin: 14px;
   position: relative;
 }
 
@@ -69,6 +75,10 @@
     @include small {
       width: 200px;
       font-size: 1.4rem;
+    }
+
+    @include x-small {
+      width: 280px;
     }
   }
 
@@ -88,6 +98,7 @@
 
 .description {
   display: flex;
+  justify-content: space-between;
   font-size: 1.2rem;
 
   @include x-small {
@@ -99,14 +110,13 @@
     align-items: center;
 
     & + .item {
-      margin-left: 14px;
+      margin-left: 12px;
     }
 
     .item-content {
-      margin-left: 8px;
+      margin-left: 4px;
 
       @include small {
-        margin-left: 0;
       }
     }
   }
@@ -126,14 +136,10 @@
   @include large {
     font-size: 1rem;
   }
-
-  @include small {
-    justify-content: space-around;
-  }
 }
 
 .status {
-  width: 148px;
+  max-width: 148px;
   padding: 16px 12px;
   font-size: 1.2rem;
   background: #fff3ef;
@@ -142,18 +148,19 @@
   flex-direction: column;
   justify-content: space-between;
 
-  @include large {
-    display: none;
-  }
+  // @include large {
+  //   display: none;
+  // }
 
   @include medium {
     display: flex;
   }
 
   @include x-small {
-    width: 100%;
+    max-width: 100%;
     flex-direction: row;
     justify-content: space-around;
+    border-radius: 0;
   }
 }
 
