--- a/src/layouts/DefaultLayout/Sidebar/Sidebar.module.scss
+++ b/src/layouts/DefaultLayout/Sidebar/Sidebar.module.scss
@@ -66,6 +66,11 @@
     justify-content: center;
   }
 
+  @include x-small {
+    justify-content: unset;
+    max-width: 90%;
+  }
+
   &:hover {
     background-color: rgba(245, 142, 106, 0.8);
     color: #fff;
@@ -121,5 +126,11 @@
 @include x-large {
   .label {
     display: none;
+  }
+}
+
+@include x-small {
+  .label {
+    display: block;
   }
 }
